# mox

./: README.md  README_KVM.md  README_ZFS.md  build_installer.sh  pyproject.toml
installer/: README.md  install_mox.sh  play.yml
