[tool.poetry]
name = "mox"
version = "0.1.0"
description = ""
authors = ["Nicholas Romero <ncrmro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.4"
ansible = "2.10.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
